--- a/moveit2_scripts/CMakeLists.txt
+++ b/moveit2_scripts/CMakeLists.txt
@@ -29,4 +29,30 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+
+# object detection node executables and dependencies 
+add_executable(pick_and_place src/pick_and_place.cpp)
+target_include_directories(pick_and_place PUBLIC include)
+ament_target_dependencies(pick_and_place 
+    ament_cmake
+    rclcpp
+    rclcpp_action
+    moveit_core
+    moveit_ros_planning_interface
+    interactive_markers
+    moveit_ros_planning
+    control_msgs
+)
+
+install(TARGETS
+   pick_and_place
+   DESTINATION lib/${PROJECT_NAME}
+)
+
+# install the launch files
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}/
+)
+
 ament_package()
