Added RVIZ config to visualize the point cloud

--- a/object_detection/CMakeLists.txt
+++ b/object_detection/CMakeLists.txt
@@ -35,13 +35,17 @@ rosidl_generate_interfaces(${PROJECT_NAME}
 # add the python scripts 
 install(PROGRAMS
   scripts/static_tf_publisher.py
+  scripts/objects_detection.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
 # install the launch files
 install(DIRECTORY
   launch
+  rviz
   DESTINATION share/${PROJECT_NAME}/
 )
- 
+
+ament_export_dependencies(rosidl_default_runtime)
+
 ament_package()
