Implemented pick and place of the object detected in the real environment

--- a/moveit2_scripts/CMakeLists.txt
+++ b/moveit2_scripts/CMakeLists.txt
@@ -75,10 +75,26 @@ ament_target_dependencies(pick_and_place_perception
 	object_detection
 )
 
+# Real robot object detection with perception node executables and dependencies 
+add_executable(pick_and_place_perception_real src/pick_and_place_perception_real.cpp)
+target_include_directories(pick_and_place_perception_real PUBLIC include)
+ament_target_dependencies(pick_and_place_perception_real 
+    ament_cmake
+    rclcpp
+    rclcpp_action
+    moveit_core
+    moveit_ros_planning_interface
+    interactive_markers
+    moveit_ros_planning
+    control_msgs
+	object_detection
+)
+
 install(TARGETS
    pick_and_place
    pick_and_place_real
    pick_and_place_perception
+   pick_and_place_perception_real
    DESTINATION lib/${PROJECT_NAME}
 )
 
